<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BlockBreaker</string>
    <string name="use_orient_sens">Use Orientation Sensor</string>
    <string name="use_orient_sens_sum">check this to use the orientation sensor to control the gravity of the blocks</string>
    <string name="gameplay_options">Gameplay Options</string>
    <string name="number_of_turns">Number of Turns</string>
    <string name="number_of_turns_sum">Select the number of turns you would like to have in your levels here. Default Value of 16 is recommended.</string>
    <string name="time_attack">Time Attack Mode</string>
    <string name="time_attack_sum">Play against the clock and try to solve as many levels as possible</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_sum">Choose your preferred difficulty setting here</string>
    <string name="input_name_title">Input your name here!</string>
    <string name="save">Save</string>
    <string name="input_name_sum">Change the name that is being used for Highscores</string>
    <string name="input_name">Name</string>
    <string name="input_name_def">Player</string>
    <string name="input_name_desc">Input a name containing 1 to 10 characters</string>
    <string name="turns">Turns</string>
    <string name="time">Time</string>
    <string name="next">Next</string>
    <string name="menu">Menu</string>
    <string name="from_seed">Level from seed</string>
    <string name="restart">Restart</string>
    <string name="start">Start</string>
    <string name="restart_question">Restart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="time_attack_start_text">Press Button to start playing!</string>
    <string name="completed_levels_text">Completed Levels</string>
    <string name="game_over_text">Game Over!</string>
    <string name="score">Score</string>
    <string name="score_text">Score</string>
    <string name="lost_levels_text">Lost Levels</string>
    <string name="exit_game_question">Exit game?</string>
    <string name="input_seed_question">Which seed do you want to load?</string>
    <string name="wrong_seed_input_text">Wrong input!\nPlease input a number seed!</string>
    <string name="win_text">You win!</string>
    <string name="lose_text">You lose!</string>
    <string name="ok">OK</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_text">To win a level you must have all the combinations that are displayed on the left of the screen at once (only horizontal and vertical combinations count) by clicking on the blocks to destroy them. 0 means that the color is irrelevant.</string>
</resources>