<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="@string/gameplay_options">
                <CheckBoxPreference
                        android:title="@string/use_orient_sens"
                        android:defaultValue="false"
                        android:summary="@string/use_orient_sens_sum"
                        android:key="orient_sens_pref"/>
                <CheckBoxPreference
                    	android:title="@string/time_attack"
                    	android:defaultValue="false"
                    	android:summary="@string/time_attack_sum"
                    	android:key="time_attack_pref"/>
                <ListPreference 
                    	android:title="@string/number_of_turns"
       			 		android:entries="@array/turn_choices"
       			 		android:defaultValue="16"
       					android:summary="@string/number_of_turns_sum"
       					android:entryValues="@array/turn_choices"
       			 		android:key="number_of_turns_pref"/>
                <ListPreference
                    	android:title="@string/difficulty"
                    	android:entries="@array/difficulty_choices"
                    	android:defaultValue="0"
                    	android:summary="@string/difficulty_sum"
                    	android:entryValues="@array/difficulty_choices_rep"
                    	android:key="difficulty_pref"/>
                <EditTextPreference android:positiveButtonText="@string/save" 
                    android:dialogTitle="@string/input_name_title" 
                    android:summary="@string/input_name_sum" 
                    android:key="input_name_pref" android:defaultValue="@string/input_name_def" android:title="@string/input_name" android:dialogMessage="@string/input_name_desc"/>
        </PreferenceCategory>
</PreferenceScreen>